crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__pulse__cal.qasm-parse.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: parse_snap
---
id: tests/snippets/reference/pulse/cal.qasm
expect-parse: Todo
--- parser ---
ok: false
panicked: false
errors: 7
--- ast ---
SOURCE_FILE@0..76: 
cal {}
cal {One long, otherwise invalid token.}
cal {Outer {nested} outer}

CAL@1..7: cal {}
BLOCK_EXPR@5..7: {}
CAL@8..48: cal {One long, otherwise invalid token.}
BLOCK_EXPR@12..48: {One long, otherwise invalid token.}
EXPR_STMT@13..46: One long, otherwise invalid token
GATE_CALL_EXPR@13..46: One long, otherwise invalid token
IDENTIFIER@13..16: One
QUBIT_LIST@17..46: long, otherwise invalid token
IDENTIFIER@17..21: long
IDENTIFIER@23..32: otherwise
IDENTIFIER@33..40: invalid
IDENTIFIER@41..46: token
ERROR@46..47: .
CAL@49..75: cal {Outer {nested} outer}
BLOCK_EXPR@53..75: {Outer {nested} outer}
EXPR_STMT@54..59: Outer
IDENTIFIER@54..59: Outer
EXPR_STMT@60..68: {nested}
BLOCK_EXPR@60..68: {nested}
IDENTIFIER@61..67: nested
IDENTIFIER@69..74: outer
